tests/ui/13-raw-in-attribute.rs
use azumi::html;
use azumi::Raw;

fn main() {
    let _component = html! {
        <div class={Raw("test")}></div>
    };
}
